--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "_includes"]
 	path = _includes
-	url = git://github.com/youreevil/web_includes.git
-	ignore = all
+	url = https://github.com/youreevil/web_includes.git
