--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "_includes"]
 	path = _includes
 	url = https://github.com/youreevil/web_includes.git
+[submodule "_layouts"]
+	path = _layouts
+	url = https://github.com/youreevil/web_layouts.git
