--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "_includes"]
+[submodule "Design"]
 	path = _includes
 	url = https://github.com/feg-stuttgart/web_includes.git
-[submodule "_layouts"]
+[submodule "Layouts]
 	path = _layouts
 	url = https://github.com/feg-stuttgart/web_layouts.git
-[submodule "img"]
+[submodule "Bilder"]
 	path = img
 	url = https://github.com/feg-stuttgart/web_bilder
