--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: rvm
 rvm:
   - 2.0.0
 install:
+  - gem -v
   - gem install jekyll -V
   - gem install rdiscount -V
 before_script:
+  - git --version
   - git submodule update --init -v 
   - git submodule foreach git pull origin master -v
 script:
