--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Layouts"]
 	path = _layouts
 	url = https://github.com/feg-stuttgart/web_layouts.git
+[submodule "static"]
+	path = static
+	url = https://github.com/feg-stuttgart/web_includes
