--- a/_data/images-Galerie-Vermischtes-1.yml
+++ b/_data/images-Galerie-Vermischtes-1.yml
@@ -1,11 +1,11 @@
-- link: http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/a1.jpg
-  src:  http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/min/a1.jpg
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a1.jpg
+  src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a1.jpg
   alt:  Beim Wandertag an der Grabkapelle auf dem Rotenberg
 
-- link: http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/a2.jpg
-  src:  http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/min/a2.jpg
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a2.jpg
+  src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a2.jpg
   alt:  Fußballmannschaft des FEG für "Jugend trainiert für Olympia
   
-- link: http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/a3.jpg
-  src:  http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/min/a3.jpg
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a3.jpg
+  src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a3.jpg
   alt:  Präsentation der neuen Trikots
