--- a/_data/images-Galerie-Vermischtes-2.yml
+++ b/_data/images-Galerie-Vermischtes-2.yml
@@ -1,11 +1,11 @@
-- link: http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/a4.jpg
-  src:  http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/min/a4.jpg
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a4.jpg
+  src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a4.jpg
   alt:  Hausaufgabenbetreuung
   
-- link: http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/a5.jpg
-  src:  http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/min/a5.jpg
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a5.jpg
+  src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a5.jpg
   alt:  Der Computerraum nach der Neuausstattung
   
-- link: http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/a6.jpg
-  src:  http://www.feg-stuttgart.tk/static/img/Galerie/Vermischtes/min/a6.jpg
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a6.jpg
+  src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a6.jpg
   alt:  Künstlerische Ansicht des Schulgebäudes
