--- a/_data/images-Portrait-Kollegium.yml
+++ b/_data/images-Portrait-Kollegium.yml
@@ -1,3 +1,3 @@
-- src: http://www.feg-stuttgart.tk/static/img/Portrait/Kollegium/k12.jpg
+- src: http://images.feg-stuttgart.tk/Portrait/Kollegium/k12.jpg
   alt: Das Kollegium im Schuljahr 2012/13, ein aktuelles Bild wird in den kommenden Wochen erstellt
   
