--- a/_data/images-Galerie-Vermischtes-2.yml
+++ b/_data/images-Galerie-Vermischtes-2.yml
@@ -1,11 +1,11 @@
-- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a4.webp
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a4.jpg
   src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a4.webp
   alt:  Hausaufgabenbetreuung
   
-- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a5.webp
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a5.jpg
   src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a5.webp
   alt:  Der Computerraum nach der Neuausstattung
   
-- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a6.webp
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a6.jpg
   src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a6.webp
   alt:  Künstlerische Ansicht des Schulgebäudes
