--- a/_data/images-Galerie-Vermischtes-1.yml
+++ b/_data/images-Galerie-Vermischtes-1.yml
@@ -1,11 +1,11 @@
-- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a1.webp
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a1.jpg
   src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a1.webp
   alt:  Beim Wandertag an der Grabkapelle auf dem Rotenberg
 
-- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a2.webp
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a2.jpg
   src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a2.webp
   alt:  Fußballmannschaft des FEG für "Jugend trainiert für Olympia
   
-- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a3.webp
+- link: http://images.feg-stuttgart.tk/Galerie/Vermischtes/a3.jpg
   src:  http://images.feg-stuttgart.tk/Galerie/Vermischtes/min/a3.webp
   alt:  Präsentation der neuen Trikots
